Finished replacement logic, added main program

--- a/spotify_gender_ex/res/credits.html
+++ b/spotify_gender_ex/res/credits.html
@@ -1,22 +1,29 @@
-<p>
-<h1>Diese Spotify-Version wurde degenderifiziert.</h1>
-<p>Versionsinfo:</p>
-<table style="border: 2px solid green">
-    <tr>
-        <td>Spotify</td>
-        <td>{{SPOTIFY_VERSION}}</td>
-    </tr>
-    <tr>
-        <td>Spotify-Gender-Ex</td>
-        <td>{{GENDEREX_VERSION}}</td>
-    </tr>
-    <tr>
-        <td>Ersetzungstabelle</td>
-        <td>{{REPLACEMENT_TABLE}}</td>
-    </tr>
-</table>
-<p>Infos und Code: <a href="https://github.com/Theta-Dev/Spotify-Gender-Ex">https://github.com/Theta-Dev/Spotify-Gender-Ex</a>
-</p>
+<div id="gender-ex-credits">
+    <h1>Deine Spotify-App wurde degenderifiziert.</h1>
+    <p>Versionsinfo:</p>
+    <table style="border: 2px solid green">
+        <tr>
+            <td>Spotify</td>
+            <td>{{SPOTIFY_VERSION}}</td>
+        </tr>
+        <tr>
+            <td>Spotify-Gender-Ex</td>
+            <td>{{GENDEREX_VERSION}}</td>
+        </tr>
+        <tr>
+            <td>Ersetzungstabelle</td>
+            <td>{{REPLACEMENT_TABLE}}</td>
+        </tr>
+        <tr>
+            <td>ET-Hash (md5)</td>
+            <td>{{REPLACEMENT_HASH}}</td>
+        </tr>
+    </table>
+    <p>Spotify-Gender-Ex von <a href="https://thetadev.de">ThetaDev</a></p>
+    <p>Infos und Code: <a href="https://github.com/Theta-Dev/Spotify-Gender-Ex">https://github.com/Theta-Dev/Spotify-Gender-Ex</a></p>
 
-<p>Falls du irgendwelche Probleme mit dieser Spotify-Version hast, teste bitte zuerst die Originalversion, bevor du den Spotify-Support kontaktierst.</p>
-</p>
+    <p>Dies ist eine inoffizielle Modifikation der Spotify-App. Verwendung auf eigene Gefahr.</p>
+
+    <p>Falls du irgendwelche Probleme mit deiner Spotify-Installation hast, teste bitte zuerst die Originalversion, bevor du
+        den Spotify-Support kontaktierst.</p>
+</div>
