Added build date to credits, V0.1.0

--- a/spotify_gender_ex/res/credits.html
+++ b/spotify_gender_ex/res/credits.html
@@ -18,6 +18,10 @@
             <td>ET-Hash (md5)</td>
             <td>{{REPLACEMENT_HASH}}</td>
         </tr>
+        <tr>
+            <td>Erstelldatum</td>
+            <td>{{BUILD_DATE}}</td>
+        </tr>
     </table>
     <p>Spotify-Gender-Ex von <a href="https://thetadev.de">ThetaDev</a></p>
     <p>Infos und Code: <a href="https://github.com/Theta-Dev/Spotify-Gender-Ex">https://github.com/Theta-Dev/Spotify-Gender-Ex</a></p>
