Rework for Version 1 Automatic Spotify download Add replacements interactively

--- a/spotify_gender_ex/res/credits.html
+++ b/spotify_gender_ex/res/credits.html
@@ -11,12 +11,8 @@
             <td>{{GENDEREX_VERSION}}</td>
         </tr>
         <tr>
-            <td>Ersetzungstabelle</td>
-            <td>{{REPLACEMENT_TABLE}}</td>
-        </tr>
-        <tr>
-            <td>ET-Hash (md5)</td>
-            <td>{{REPLACEMENT_HASH}}</td>
+            <td>Ersetzungstabellen</td>
+            <td>{{RT_VERSION}}</td>
         </tr>
         <tr>
             <td>Erstelldatum</td>
