--- a/spotify_gender_ex/res/credits.html
+++ b/spotify_gender_ex/res/credits.html
@@ -11,7 +11,7 @@
             <td>{{GENDEREX_VERSION}}</td>
         </tr>
         <tr>
-            <td>Ersetzungstabellen</td>
+            <td>Ersetzungstabelle</td>
             <td>{{RT_VERSION}}</td>
         </tr>
         <tr>
